[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://opponent/opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://ball/ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://level/level.gd" type="Script" id=4]
[ext_resource path="res://Assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.5, 300 )

[node name="level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="player_score" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
custom_colors/font_color = Color( 0.85098, 0.847059, 0.843137, 1 )
custom_fonts/font = SubResource( 3 )
text = "Test"
align = 1
valign = 1

[node name="opponent_score" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
custom_colors/font_color = Color( 0.85098, 0.847059, 0.843137, 1 )
custom_fonts/font = SubResource( 4 )
text = "Test"
align = 1
valign = 1

[node name="restart_delay" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -250.0
custom_colors/font_color = Color( 0.946094, 0.267634, 0.0376957, 1 )
custom_fonts/font = SubResource( 5 )
text = "Countdown"
align = 1
valign = 1

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 294 )

[node name="opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 975, 300 )

[node name="ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 515, 292 )

[node name="top wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top wall"]
position = Vector2( 512, -10 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="bottom wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom wall"]
position = Vector2( 512, 610 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2( -21, 300 )
shape = SubResource( 2 )

[node name="right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2( 1048, 300 )
shape = SubResource( 2 )

[node name="countdown_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="score_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
[connection signal="timeout" from="countdown_timer" to="." method="_on_countdown_timer_timeout"]
